*SVN*

* Fix scaffolding template paths, it was broken on Win32

* Fix that functional testing of :layered controllers failed when using the SOAP protocol

* Allow invocation filters in :direct controllers as well, as they have access to more information regarding the web service request than ActionPack filters

* Add support for a :base64 signature type #1272 [Shugo Maeda]

* Fix that boolean fields were not rendered correctly in scaffolding

* Fix that scaffolding was not working for :delegated dispatching

* Add support for structured types as input parameters to scaffolding, this should let one test the blogging APIs using scaffolding as well

* Fix that generated WSDL was not using relative_url_root for base URI #1210 [Shugo Maeda]

* Use UTF-8 encoding by default for SOAP responses, but if an encoding is supplied by caller, use that for the response  #1211 [Shugo Maeda, NAKAMURA Hiroshi]

* If the WSDL was retrieved over HTTPS, use HTTPS URLs in the WSDL too

* Fix that casting change in 0.7.0 would convert nil values to the default value for the type instead of leaving it as nil


*0.7.1* (20th April, 2005)

* Depend on Active Record 1.10.1 and Action Pack 1.8.1


*0.7.0* (19th April, 2005)

* When casting structured types, don't try to send obj.name= unless obj responds to it, causes casting to be less likely to fail for XML-RPC

* Add scaffolding via ActionController::Base.web_service_scaffold for quick testing using a web browser

* ActionWebService::API::Base#api_methods now returns a hash containing ActionWebService::API::Method objects instead of hashes. However, ActionWebService::API::Method defines a #[]() backwards compatibility method so any existing code utilizing this will still work.

* The :layered dispatching mode can now be used with SOAP as well, allowing you to support SOAP and XML-RPC clients for APIs like the metaWeblog API

* Remove ActiveRecordSoapMarshallable workaround, see #912 for details
